test/resources/InvalidPrograms/unknown_type_local.lo
class Main {
{ UnknownType x; }
int main(){ return 0; }
}
